openshift.yaml
apiVersion: v1
kind: List
metadata: {}
items:
- apiVersion: v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewBuild
    generation: 1
    labels:
      build: micro-user-rest
    name: micro-user-rest
    namespace: fbac
  spec:
    lookupPolicy:
      local: false
- apiVersion: v1
  kind: BuildConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewBuild
    labels:
      build: micro-user-rest
    name: micro-user-rest
    namespace: fbac
  spec:
    output:
      to:
        kind: ImageStreamTag
        name: 'micro-user-rest:latest'
    postCommit: {}
    resources: {}
    runPolicy: Serial
    source:
      binary: {}
      type: Binary
    strategy:
      dockerStrategy: {}
      type: Docker
    triggers:
      - github:
          secret: xoDZoMWEv06_sntOOr6J
        type: GitHub
      - generic:
          secret: R-f_K9TKmSepQUOCGqN2
        type: Generic
- apiVersion: v1
  kind: BuildConfig
  metadata:
    annotations:
      pipeline.alpha.openshift.io/uses: '[{"name": "micro-user-rest", "namespace": "fbac", "kind": "DeploymentConfig"}]'
    name: micro-user-rest-service-pipeline
  spec:
    source:
      git:
        ref: master
        uri: https://github.com/bobbydeveaux/micro-user-rest.git
      type: Git
    strategy:
      type: JenkinsPipeline
      jenkinsPipelineStrategy:
        jenkinsfilePath: ./Jenkinsfile
    triggers:
    - generic:
        secret: RandomPassword123
      type: Generic
- apiVersion: v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: 'true'
    labels:
      app: micro-user-rest
    name: micro-user-rest
    namespace: fbac
  spec:
    host: micro-user-rest-fbac.51.179.219.187.nip.io
    port:
      targetPort: 8181-tcp
    to:
      kind: Service
      name: micro-user-rest
      weight: 100
    wildcardPolicy: None
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    generation: 3
    labels:
      app: micro-user-rest
    name: micro-user-rest
    namespace: fbac
  spec:
    replicas: 1
    selector:
      app: micro-user-rest
      deploymentconfig: micro-user-rest
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: micro-user-rest
          deploymentconfig: micro-user-rest
      spec:
        containers:
          - env:
              - name: NATS_HOST
                value: 'nats://nats:4222'
            imagePullPolicy: Always
            name: micro-user-rest
            resources: {}
            terminationMessagePath: /dev/termination-log
            terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
      - type: ConfigChange
      - imageChangeParams:
          automatic: false
          containerNames:
            - micro-user-rest
          from:
            kind: ImageStreamTag
            name: 'micro-user-rest:latest'
            namespace: fbac
        type: ImageChange
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    labels:
      app: micro-user-rest
    name: micro-user-rest
    namespace: fbac
  spec:
    ports:
      - name: 8181-tcp
        port: 8181
        protocol: TCP
        targetPort: 8181
    selector:
      app: micro-user-rest
      deploymentconfig: micro-user-rest
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
